# OpenVBI

./: .gitignore  Dockerfile.build  LICENSE  README.md  RELEASE.md  ReleaseNotes.md  pyproject.toml  requirements-advanced.txt  requirements-build.txt  requirements-test.txt  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: flake8-and-unit-tests.yml
docs/dev/: TODO.md
logo-designs/: openvbi-logo.ai
openvbi/: __init__.py
openvbi/adaptors/: __init__.py  dcdb.py  factory.py  generic_ascii.py  geopackage.py  logger_file.py  teamsurv.py  wibl.py  ydvr.py
openvbi/cache/: __init__.py  dcdb.py
openvbi/command/: __init__.py  __main__.py
openvbi/core/: __init__.py  interpolation.py  metadata.py  observations.py  schema.py  statistics.py  timebase.py  types.py  unit_conversion.py
openvbi/corrections/: __init__.py
openvbi/corrections/waterlevel/: __init__.py
openvbi/corrections/waterlevel/noaa/: __init__.py
openvbi/examples/: basic_processing.py  dedup.py  metadata.py  non_depth_to_csv.py  outlier_filtering.py  prep-instrumented.py  prep-simple.py  prep.py  workflow.py
openvbi/filters/: __init__.py  deduplicate.py  outliers.py  thresholding.py  timeslot.py
openvbi/timestamping/: __init__.py  obs.py  timebase.py
openvbi/workflow/: README.md  __init__.py  __main__.py  basic_workflow.py  schema_widget.py
openvbi/workflow_gui/: README.md  gui.py  schema_widget.py
tests/: fixtures.py
tests/data/: 00010001.DAT.lzma  00030011.DAT.lzma
tests/unit/: test_cache.py  test_metadata.py  test_non_depth_variables.py  test_processing.py  test_schema.py  test_unit_conversion.py  test_workflow_tool.py
