[build-system]
requires = ["setuptools>=76.1.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies", "optional-dependencies"]
name = "openvbi"
authors = [
    { name="Brian Calder", email="brc@ccom.unh.edu" },
    { name="Brian Miles", email="bmiles@ccom.unh.edu" }
]
description = "Open Volunteer Bathymetric Information reference code implementation"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CCOMJHC/OpenVBI"
"Bug Tracker" = "https://github.com/CCOMJHC/OpenVBI/issues"

[tool.setuptools.dynamic]
version = {attr = "openvbi.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {test = {file = ["requirements-test.txt"]}}
