[metadata]
name = openvbi
version = attr: openvbi.__version__
description = Open Volunteer Bathymetric Information reference code implementation
long_description = file: README.metadata
long_description_content_type = text/markdown
url = https://github.com/CCOMJHC/OpenVBI
author = Brian Calder
author_email = brc@ccom.unh.edu
license_file = LICENSE.text
classifiers =
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
python_requires = >= 3.11
install_requires =
    numpy>=1.20
    csbschema~=1.1.1

[bdist_wheel]
universal = 0
